monitoria/mac323/4-2-26/tester/generator/generator.log

mkdir: é impossível criar o diretório “cases”: Arquivo existe
g++ -std=c++11    generator/generator.cpp   -o generator/generator
generator/generator.cpp: In function ‘int main(int, char**)’:
generator/generator.cpp:36:14: error: ‘val’ was not declared in this scope
         if (!val[a-1]) a = -a;
              ^
generator/generator.cpp:42:40: error: ‘swap’ was not declared in this scope
         if (rnd.next(2) == 0) swap(a, b);
                                        ^
generator/generator.cpp:42:40: note: suggested alternatives:
In file included from /usr/include/c++/4.9/set:62:0,
                 from generator/../testlib.h:138,
                 from generator/generator.cpp:1:
/usr/include/c++/4.9/bits/stl_multiset.h:829:5: note:   ‘std::swap’
     swap(multiset<_Key, _Compare, _Alloc>& __x,
     ^
In file included from /usr/include/c++/4.9/exception:162:0,
                 from /usr/include/c++/4.9/new:40,
                 from /usr/include/c++/4.9/bits/stl_construct.h:59,
                 from /usr/include/c++/4.9/bits/stl_tempbuf.h:60,
                 from /usr/include/c++/4.9/bits/stl_algo.h:62,
                 from /usr/include/c++/4.9/algorithm:62,
                 from generator/../testlib.h:130,
                 from generator/generator.cpp:1:
/usr/include/c++/4.9/bits/exception_ptr.h:160:5: note:   ‘std::__exception_ptr::swap’
     swap(exception_ptr& __lhs, exception_ptr& __rhs)
     ^
<builtin>: recipe for target 'generator/generator' failed
make: *** [generator/generator] Error 1
make: 'validator/validator' is up to date.
Generating Case generated_000
Generating Case generated_001
Generating Case generated_002
Generating Case generated_003
Generating Case generated_004
Generating Case generated_005
Generating Case generated_006
Generating Case generated_007
Generating Case generated_008
Generating Case generated_009
Generating Case generated_010
Generating Case generated_011
Generating Case generated_012
Generating Case generated_013
Generating Case generated_014
Generating Case generated_015
Generating Case generated_016
Generating Case generated_017
Generating Case generated_018
Generating Case generated_019
Validating Case cases/generated_000.in
Validating Case cases/generated_001.in
Validating Case cases/generated_002.in
Validating Case cases/generated_003.in
Validating Case cases/generated_004.in
Validating Case cases/generated_005.in
Validating Case cases/generated_006.in
Validating Case cases/generated_007.in
Validating Case cases/generated_008.in
Validating Case cases/generated_009.in
Validating Case cases/generated_010.in
Validating Case cases/generated_011.in
Validating Case cases/generated_012.in
Validating Case cases/generated_013.in
Validating Case cases/generated_014.in
Validating Case cases/generated_015.in
Validating Case cases/generated_016.in
Validating Case cases/generated_017.in
Validating Case cases/generated_018.in
Validating Case cases/generated_019.in
